[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Scripts/StarCountPanel.gd" type="Script" id=1]
[ext_resource path="res://Physics Objects/Textures/star.png" type="Texture" id=2]

[node name="StarCountPanel" type="Panel" groups=[
"StarCount",
]]
margin_right = 121.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Star1" type="Sprite" parent="."]
position = Vector2( 20, 20 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 60, 20 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 100, 20 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
